[gd_scene load_steps=4 format=3 uid="uid://cqctqm0k1qlsr"]

[ext_resource type="Script" uid="uid://b5ssvuhii5rej" path="res://ui/game_paused_ui/game_paused_ui.gd" id="1_rf5t7"]
[ext_resource type="FontFile" uid="uid://c5qw4j6h2tlna" path="res://assets/fonts/fusion-pixel-10px-proportional-sc-latin-400-normal.woff2" id="2_imb1i"]

[sub_resource type="LabelSettings" id="LabelSettings_63c5o"]
font = ExtResource("2_imb1i")
font_size = 40
outline_size = 8
outline_color = Color(0, 0, 0, 1)

[node name="GamePausedUI" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_rf5t7")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.407843)
metadata/_edit_lock_ = true

[node name="GamePausePanel" type="PanelContainer" parent="."]
unique_name_in_owner = true
process_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -124.0
offset_top = -148.0
offset_right = 124.0
offset_bottom = 76.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_group_ = true

[node name="MarginContainer" type="MarginContainer" parent="GamePausePanel"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="GamePausePanel/MarginContainer"]
layout_mode = 2

[node name="GamePausedLabel" type="Label" parent="GamePausePanel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Game Paused"
label_settings = SubResource("LabelSettings_63c5o")

[node name="Underline" type="ColorRect" parent="GamePausePanel/MarginContainer/VBoxContainer/GamePausedLabel"]
custom_minimum_size = Vector2(0, 2)
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -8.0
offset_bottom = -6.0
grow_horizontal = 2
grow_vertical = 0

[node name="ContinueButton" type="Button" parent="GamePausePanel/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Continue"

[node name="RestartLevelButton" type="Button" parent="GamePausePanel/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Restart Level"

[node name="AbortMissionButton" type="Button" parent="GamePausePanel/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Abort Level"

[node name="SettingsButton" type="Button" parent="GamePausePanel/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
text = "Settings"

[node name="QuitButton" type="Button" parent="."]
unique_name_in_owner = true
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -128.0
offset_top = -56.0
offset_right = -16.0
offset_bottom = -16.0
grow_horizontal = 0
grow_vertical = 0
text = "Quit Game"

[connection signal="pressed" from="GamePausePanel/MarginContainer/VBoxContainer/ContinueButton" to="." method="_on_continue_button_pressed"]
[connection signal="pressed" from="GamePausePanel/MarginContainer/VBoxContainer/RestartLevelButton" to="." method="_on_restart_mission_button_pressed"]
[connection signal="pressed" from="GamePausePanel/MarginContainer/VBoxContainer/AbortMissionButton" to="." method="_on_abort_mission_button_pressed"]
[connection signal="pressed" from="GamePausePanel/MarginContainer/VBoxContainer/SettingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="QuitButton" to="." method="_on_quit_button_pressed"]
